add maven test case